fixed to initial position shifts

--- a/client/src/components/ProductDetails/productDetails.scss
+++ b/client/src/components/ProductDetails/productDetails.scss
@@ -19,7 +19,6 @@
             z-index: 999;
             width: 60%;
             overflow: hidden;
-            transition: width cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 
             #imgContainer{
                 width: 100%;
